--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=8080
-DB_CONNECT=mongodb+srv://mern_user:EQVRy6Y0j7Xod2rw@cluster0.mr4hr.mongodb.net/restserver
+MONGODB_CNN=mongodb+srv://kevinfavre:scaniakbg578@cluster0.mr4hr.mongodb.net/cafeDB
